# shuttle-cch23

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
binary/: Cargo.toml
binary/src/lib/: router.rs  startup.rs
binary/tests/api/: endpoints.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/lib/: lib.rs  router.rs
common/tests/: endpoints.rs
day1/: Cargo.toml
day1/src/: lib.rs
day11/: Cargo.toml
day11/src/: lib.rs
day4/: Cargo.toml
day4/src/: lib.rs
day4/src/domain/: mod.rs  reindeers.rs
day4/src/errors/: errors.rs  mod.rs
day5/: Cargo.toml
day5/src/: lib.rs
day6/: Cargo.toml
day6/src/: lib.rs
day7/: Cargo.toml
day7/src/: lib.rs
day8/: Cargo.toml
day8/src/: lib.rs
domain/: Cargo.toml
domain/src/: lib.rs
errors/: Cargo.toml
errors/src/: lib.rs
minus1/: Cargo.toml
minus1/src/: fake_error.rs  lib.rs  root.rs
minus1/src/lib/: lib.rs  router.rs  startup.rs
minus1/src/lib/routes/: mod.rs  root.rs
minus1/tests/: endpoints.rs  main.rs
server/: Cargo.toml
server/src/lib/: cch23service.rs  lib.rs  router.rs  router_service.rs  startup.rs
server/tests/api/: day_1_challenge_endpoints.rs  day_4_challenge_endpoints.rs  day_5_challenge_endpoints.rs  day_6_challenge_endpoints.rs  day_7_challenge_endpoints.rs  day_8_challenge_endpoints.rs  endpoints.rs  main.rs  minus1_challenge_endpoints.rs  minus_1_challenge_endpoints.rs
src/lib/: router.rs  startup.rs
src/lib/routes/: mod.rs  not_found.rs  root.rs
tests/: endpoints.rs
utilities/: Cargo.toml
utilities/src/: body_bytes.rs  lib.rs  parameter_extractor.rs  parser.rs
