[package]
name = "cch23-sentinel1909"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cch23-sentinel1909"
path = "src/bin/httpd.rs"

[lib]
name = "cch23_sentinel1909"
path = "src/lib/lib.rs"

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
shuttle-runtime = "0.34.1"
shuttle-tower = "0.34.1"
tower = { version = "0.4.13", features = ["full"] }
tokio = "1.34.0"

[dev-dependencies]
tower-test = "0.4.0"
