[package]
name = "common"
version = "11.1.0"
edition = "2021"

[lib]
name = "common_features"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
hyper = { version = "0.14.27", features = [ "full" ] }
