[package]
name = "day1"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "day1_endpoints"
path = "src/lib.rs"

[dependencies]
errors = { path = "../errors" }
hyper = { version = "0.14.27", features = ["full"] }