[package]
name = "day1"
version = "1.2.0"
edition = "2021"

[lib]
name = "day1_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hyper = { version = "0.14.27", features = ["full"] }
tower = { version = "0.4.4", features = [ "full" ] }
utilities = { path = "../utilities" }