[package]
name = "day11"
version = "11.1.0"
edition = "2021"

[lib]
name = "day11_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
utilities = { path = "../utilities" }

