[package]
name = "day4"
version = "0.1.0"
edition = "2021"

[lib]
name = "day4_endpoints"
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.29"
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
