[package]
name = "day5"
version = "5.0.0"
edition = "2021"

[lib]
name = "day5_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
domain = { path = "../domain" }
errors = { path = "../errors" }
hyper = { version = "0.14.27", features = ["full"] }
