[package]
name = "day6"
version = "0.1.0"
edition = "2021"

[lib]
name = "day6_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
hyper = { version = "0.14.27", features = [ "full" ] }
utilities = { path = "../utilities" }
serde_json = "1.0.108"
