[package]
name = "day7"
version = "0.1.0"
edition = "2021"

[lib]
name = "day7_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
errors = { path = "../errors" }
hyper = { version = "0.14.27", features = ["full"] }