[package]
name = "day7"
version = "7.1.0"
edition = "2021"

[lib]
name = "day7_endpoints"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
common = { path = "../common" }
domain = { path = "../domain"}
serde_json = "1.0.108"
