[package]
name = "cch23-sentinel1909"
version = "8.1.0"
edition = "2021"

[[bin]]
name = "cch23-sentinel1909"
path = "src/bin/httpd.rs"

[lib]
name = "cch23_sentinel1909"
path = "src/lib/lib.rs"

[dependencies]
minus1 = { path = "../minus1" }
hyper = { version = "0.14.27", features = ["full"] }
shuttle-runtime = { version = "0.35.0", default-features = false }
shuttle-tower = "0.35.0"
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = [ "normalize-path" ] }
tower-util = "0.3.1"
tokio = "1.34.0"

[dev-dependencies]
tower-test = "0.4.0"
