[package]
name = "cch23-sentinel1909"
version = "8.1.0"
edition = "2021"

[[bin]]
name = "cch23-sentinel1909"
path = "src/bin/httpd.rs"

[lib]
name = "cch23_sentinel1909_server"
path = "src/lib/lib.rs"

[dependencies]
common = { path = "../common" }
domain = { path = "../domain" }
minus1 = { path = "../minus1" }
day1 = { path = "../day1" }
day4 = { path = "../day4" }
day5 = { path = "../day5"}
day6 = { path = "../day6" }
day7 = { path = "../day7" }
utilities = { path = "../utilities" }
hyper = { version = "0.14.27", features = ["full"] }
shuttle-runtime = { version = "0.35.1", default-features = false }
shuttle-tower = "0.35.1"
serde_json = "1.0.108"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.4", features = [ "full" ] }
tokio = { version = "1.34.0", features = [ "full" ] }
sync_wrapper = "0.1.1"

[dev-dependencies]
tower-test = "0.4.0"
