[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[lib]
name = "utilities"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
nom = "7.1.3"
hyper = { version = "0.14.27", features = [ "full" ] }
